--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,7 @@
     </dependencyManagement>
     <build>
         <plugins>
+            <!-- compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
