--- a/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
+++ b/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
@@ -24,5 +24,19 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.sic777.student.StudentServerLuncher</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
