--- a/sic777-framework-demo/sic777-biz-demo/pom.xml
+++ b/sic777-framework-demo/sic777-biz-demo/pom.xml
@@ -15,5 +15,31 @@
         <module>sic777-biz-student</module>
     </modules>
 
-
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!--assembly plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven-assembly-plugin.version}</version>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>${basedir}/../../../sic777-common-demo/src/main/assembly/server_assembly.xml
+                            </descriptor>
+                        </descriptors>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>make-assembly</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
