--- a/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
+++ b/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
@@ -37,6 +37,10 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
