--- a/sic777-db/pom.xml
+++ b/sic777-db/pom.xml
@@ -15,11 +15,49 @@
         <module>sic777-db-redis</module>
         <module>sic777-db-mongo</module>
         <module>sic777-db-cassandra</module>
+        <module>sic777-db-mysql</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <cassandra.version>3.2.0</cassandra.version>
         <jedis.version>2.8.1</jedis.version>
         <mongo.version>3.4.2</mongo.version>
+        <mysql.version>5.1.38</mysql.version>
+        <spring-boot-mybatis.version>1.3.2</spring-boot-mybatis.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <!-- mongodb -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>${mongo.version}</version>
+            </dependency>
+            <!-- cassandra -->
+            <dependency>
+                <groupId>com.datastax.cassandra</groupId>
+                <artifactId>cassandra-driver-core</artifactId>
+                <version>${cassandra.version}</version>
+            </dependency>
+            <!-- redis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+            <!-- spring-boot-mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${spring-boot-mybatis.version}</version>
+            </dependency>
+            <!-- mysql -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
