--- a/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
+++ b/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <dependency>
             <groupId>com.sic777</groupId>
+            <artifactId>sic777-db-mysql</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sic777</groupId>
             <artifactId>sic777-biz-student-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
