--- a/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/src/main/resources/application.properties
+++ b/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.dubbo.registry.port=2181
 ###############################
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=30041
+###############################
+######## 数据源 配置 ###########
+###############################
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SIC777?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
