--- a/sic777-micro-service/pom.xml
+++ b/sic777-micro-service/pom.xml
@@ -52,6 +52,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- aop -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
         <!-- spring-boot-starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
