--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <httpcore.version>4.4.6</httpcore.version>
         <httpclient.version>4.5.3</httpclient.version>
         <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+        <spring.version>4.3.10.RELEASE</spring.version>
         <fastjson.version>1.2.28</fastjson.version>
         <sic777-utils.version>1.0-SNAPSHOT</sic777-utils.version>
         <sic777-springboot-dubbo.version>1.0-SNAPSHOT</sic777-springboot-dubbo.version>
@@ -100,6 +101,17 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
             </dependency>
             <!-- jetty -->
             <dependency>
@@ -124,10 +136,6 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-logging</artifactId>
                     </exclusion>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.core</groupId>
-                        <artifactId>jackson-databind</artifactId>
-                    </exclusion>
                 </exclusions>
             </dependency>
             <!-- spring-boot-starter -->
@@ -147,6 +155,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>${spring-boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!-- spring-boot-starter-log4j2 -->
             <dependency>
@@ -197,6 +211,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
         <plugins>
             <!-- compiler plugin -->
