--- a/sic777-framework-demo/sic777-gateway-demo/pom.xml
+++ b/sic777-framework-demo/sic777-gateway-demo/pom.xml
@@ -9,6 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
+    </properties>
+
     <artifactId>sic777-gateway-demo</artifactId>
     <dependencies>
         <dependency>
@@ -25,6 +29,22 @@
             <groupId>com.sic777</groupId>
             <artifactId>sic777-micro-service</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-swagger2.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-annotations</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-swagger2.version}</version>
         </dependency>
     </dependencies>
     <build>
