--- a/sic777-spring-boot-dubbo/sic777-spring-boot-dubbo-provider/pom.xml
+++ b/sic777-spring-boot-dubbo/sic777-spring-boot-dubbo-provider/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!-- aop -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
         <!-- spring-boot-log4j2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
