修正启动器单词
修正启动器单词

--- a/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
+++ b/sic777-framework-demo/sic777-biz-demo/sic777-biz-student/sic777-biz-student-server/pom.xml
@@ -37,7 +37,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.sic777.student.StudentServerLuncher</mainClass>
+                            <mainClass>com.sic777.student.StudentServerLauncher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
