--- a/database/pom.xml
+++ b/database/pom.xml
@@ -2,19 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>base-framework</artifactId>
-        <groupId>com.sic777</groupId>
-        <version>1.0.0</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>base-framework</artifactId>
+		<groupId>com.sic777</groupId>
+		<version>1.0.0</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>database</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>database-springboot-mybatis</module>
-        <module>database-redis</module>
-    </modules>
+	<artifactId>database</artifactId>
+	<packaging>pom</packaging>
+	<modules>
+		<module>database-springboot-mybatis</module>
+		<module>database-redis</module>
+	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.sic777</groupId>
+			<artifactId>common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 
 </project>
