--- a/restful/restful-netty/pom.xml
+++ b/restful/restful-netty/pom.xml
@@ -17,5 +17,9 @@
 			<artifactId>restful-base</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+		</dependency>
 	</dependencies>
 </project>
