--- a/common/pom.xml
+++ b/common/pom.xml
@@ -73,6 +73,7 @@
 		<dependency>
 			<groupId>org.scala-tools</groupId>
 			<artifactId>maven-scala-plugin</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
