--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 		<netty.version>4.1.1.Final</netty.version>
 
 		<!-- plugins version -->
+		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
 		<wagon-ssh.version>2.10</wagon-ssh.version>
 		<maven-resources-plugin.version>2.4.3</maven-resources-plugin.version>
 		<maven-surefire-plugin.version>2.6</maven-surefire-plugin.version>
@@ -312,6 +313,33 @@
 	<build>
 		<!-- default plugins -->
 		<plugins>
+			<!-- compiler -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- surefire -->
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 			<!-- versions -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -320,28 +348,6 @@
 				<configuration>
 					<newVersion>${profiles.nextVersion}${profiles.suffix}</newVersion>
 					<generateBackupPoms>false</generateBackupPoms>
-				</configuration>
-			</plugin>
-			<!-- resources -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>${maven-resources-plugin.version}</version>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-					</execution>
-				</executions>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-			<!-- surefire -->
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<configuration>
-					<skip>true</skip>
 				</configuration>
 			</plugin>
 			<!-- build helper -->
@@ -375,24 +381,39 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- compiler -->
+			<!--jar plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<archive>
+						<addMavenDescriptor>true</addMavenDescriptor>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+						<manifestEntries>
+							<url>${project.url}</url>
+							<build-time>${maven.build.timestamp}</build-time>
+						</manifestEntries>
+					</archive>
 				</configuration>
+			</plugin>
+			<!-- resources -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${maven-resources-plugin.version}</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
 			</plugin>
 			<!-- javadoc -->
 			<plugin>
