--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>base-framework</artifactId>
 		<groupId>com.sic777.framework</groupId>
-		<version>0.0.1_BETA</version>
+		<version>0.0.1_RC</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
