--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sic777.framework</groupId>
 	<artifactId>base-framework</artifactId>
-	<version>0.0.1_BETA</version>
+	<version>0.0.1_RC</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 
