--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sic777.framework</groupId>
 	<artifactId>base-framework</artifactId>
-	<version>1.0.0_beta</version>
+	<version>0.0.1_BETA</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 
@@ -36,8 +36,8 @@
 		<profile>
 			<id>beta</id>
 			<properties>
-				<profiles.nextVersion>1.0.0</profiles.nextVersion>
-				<profiles.suffix>_beta</profiles.suffix>
+				<profiles.nextVersion>0.0.2</profiles.nextVersion>
+				<profiles.suffix>_BETA</profiles.suffix>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -46,8 +46,8 @@
 		<profile>
 			<id>release</id>
 			<properties>
-				<profiles.nextVersion>1.0.0</profiles.nextVersion>
-				<profiles.suffix>_release</profiles.suffix>
+				<profiles.nextVersion>0.0.1</profiles.nextVersion>
+				<profiles.suffix>_RC</profiles.suffix>
 			</properties>
 		</profile>
 	</profiles>
