--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
@@ -15,3 +15,7 @@ dubbo.application.name=client
 dubbo.application.owner=zzx
 dubbo.application.organization=sic777
 dubbo.registry.address=zookeeper://127.0.0.1:2181
+###############################
+######### 系统配置  ############
+###############################
+counter.cycle=100000
