--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 ###############################
+########## 系统配置  ###########
+###############################
+#api调用统计周期，默认15分钟(900000)
+counter.cycle=900000
+###############################
 ########## 容器配置  ###########
 ###############################
 spring.scan=com.sic777.demo.client
