--- a/common/pom.xml
+++ b/common/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>spring-context</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- slf4j-api -->
 		<dependency>
