--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/pom.xml
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/pom.xml
@@ -44,6 +44,9 @@
 						<manifest>
 							<mainClass>${MainClass}</mainClass>
 						</manifest>
+						<manifestEntries>
+							<Class-Path>..</Class-Path>
+						</manifestEntries>
 					</archive>
 					<excludes>
 						<exclude>static/**</exclude>
