--- a/pom.xml
+++ b/pom.xml
@@ -461,40 +461,40 @@
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
-			<!-- javadoc -->
-			<!--<plugin>-->
-			<!--<groupId>org.apache.maven.plugins</groupId>-->
-			<!--<artifactId>maven-javadoc-plugin</artifactId>-->
-			<!--<version>${maven-javadoc-plugin.version}</version>-->
-			<!--<configuration>-->
-			<!--<encoding>${project.build.sourceEncoding}</encoding>-->
-			<!--<aggregate>true</aggregate>-->
-			<!--<charset>${project.build.sourceEncoding}</charset>-->
-			<!--<docencoding>${project.build.sourceEncoding}</docencoding>-->
-			<!--</configuration>-->
-			<!--<executions>-->
-			<!--<execution>-->
-			<!--<id>attach-javadocs</id>-->
-			<!--<goals>-->
-			<!--<goal>jar</goal>-->
-			<!--</goals>-->
-			<!--</execution>-->
-			<!--</executions>-->
-			<!--</plugin>-->
-			<!-- source -->
-			<!--<plugin>-->
-			<!--<groupId>org.apache.maven.plugins</groupId>-->
-			<!--<artifactId>maven-source-plugin</artifactId>-->
-			<!--<version>${maven-source-plugin.version}</version>-->
-			<!--<executions>-->
-			<!--<execution>-->
-			<!--<id>attach-sources</id>-->
-			<!--<goals>-->
-			<!--<goal>jar</goal>-->
-			<!--</goals>-->
-			<!--</execution>-->
-			<!--</executions>-->
-			<!--</plugin>-->
+			<!--javadoc-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<aggregate>true</aggregate>
+					<charset>${project.build.sourceEncoding}</charset>
+					<docencoding>${project.build.sourceEncoding}</docencoding>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!--source-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<!-- ssh -->
 		<extensions>
