--- a/common/pom.xml
+++ b/common/pom.xml
@@ -61,15 +61,15 @@
 			<artifactId>commons-beanutils</artifactId>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.github.wvengen</groupId>
-				<artifactId>proguard-maven-plugin</artifactId>
-				<configuration>
-					<proguardInclude>../proguard.conf</proguardInclude>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<!--<build>-->
+		<!--<plugins>-->
+			<!--<plugin>-->
+				<!--<groupId>com.github.wvengen</groupId>-->
+				<!--<artifactId>proguard-maven-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<proguardInclude>../proguard.conf</proguardInclude>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
+		<!--</plugins>-->
+	<!--</build>-->
 </project>
