--- a/dubbo-common/pom.xml
+++ b/dubbo-common/pom.xml
@@ -39,15 +39,15 @@
             <artifactId>curator-framework</artifactId>
         </dependency>
     </dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.github.wvengen</groupId>
-				<artifactId>proguard-maven-plugin</artifactId>
-				<configuration>
-					<proguardInclude>../proguard.conf</proguardInclude>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<!--<build>-->
+		<!--<plugins>-->
+			<!--<plugin>-->
+				<!--<groupId>com.github.wvengen</groupId>-->
+				<!--<artifactId>proguard-maven-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<proguardInclude>../proguard.conf</proguardInclude>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
+		<!--</plugins>-->
+	<!--</build>-->
 </project>
