--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-server/src/main/resources/application.properties
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.scan=com.sic777.demo.server
 ###############################
 ########## Dubbo 配置 #########
 ###############################
-dubbo.scan=com.sic777.demo.server.test
+#dubbo.scan=com.sic777.demo.server.test
 dubbo.application.name=server
 dubbo.application.owner=zzx
 dubbo.application.organization=sic777
