--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-client/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.tomcat.uri-encoding=UTF-8
 ###############################
 ######### dubbo配置  ###########
 ###############################
-dubbo.scan=com.sic777.demo.client.service
+#dubbo.scan=com.sic777.demo.client.service
 dubbo.application.name=client
 dubbo.application.owner=zzx
 dubbo.application.organization=sic777
