--- a/dubbo-common/pom.xml
+++ b/dubbo-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base-framework</artifactId>
         <groupId>com.sic777.framework</groupId>
-	    <version>1.0.0</version>
+	    <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +25,7 @@
         </dependency>
         <!-- dubbo -->
         <dependency>
-            <groupId>com.alibaba</groupId>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
         <!-- fast json -->
