--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sic777.framework</groupId>
 	<artifactId>base-framework</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 
@@ -47,7 +47,7 @@
 	<properties>
 
 		<!-- version -->
-		<r.version>1.0.0</r.version>
+		<r.version>2.0.0</r.version>
 
 		<!-- base version -->
 		<java.version>1.8</java.version>
@@ -61,7 +61,7 @@
 		<spring-boot-mybatis.version>1.3.2</spring-boot-mybatis.version>
 		<spring.version>4.3.10.RELEASE</spring.version>
 		<spring-boot.version>1.5.5.RELEASE</spring-boot.version>
-		<dubbo.version>2.6.0</dubbo.version>
+		<dubbo.version>2.7.0</dubbo.version>
 		<curator-framework.version>2.12.0</curator-framework.version>
 		<fastjson.version>1.2.31</fastjson.version>
 		<httpcore.version>4.4.6</httpcore.version>
@@ -205,7 +205,7 @@
 
 			<!-- dubbo -->
 			<dependency>
-				<groupId>com.alibaba</groupId>
+				<groupId>org.apache.dubbo</groupId>
 				<artifactId>dubbo</artifactId>
 				<version>${dubbo.version}</version>
 				<exclusions>
