--- a/demo/dubbo-springboot-demo/dubbo-springboot-demo-server/src/main/resources/application.properties
+++ b/demo/dubbo-springboot-demo/dubbo-springboot-demo-server/src/main/resources/application.properties
@@ -5,11 +5,9 @@ spring.scan=com.sic777.demo.server
 ###############################
 ########## Dubbo 配置 #########
 ###############################
-#dubbo.scan=com.sic777.demo.server.test
 dubbo.application.name=server
 dubbo.application.owner=zzx
 dubbo.application.organization=sic777
-dubbo.registry.address=127.0.0.1
-dubbo.registry.port=2181
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20899
