--- a/dubbo-common/pom.xml
+++ b/dubbo-common/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>org.apache.curator</groupId>
+		    <artifactId>curator-recipes</artifactId>
+	    </dependency>
     </dependencies>
 	<!--<build>-->
 		<!--<plugins>-->
