--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-recipes</artifactId>
+				<version>${curator-framework.version}</version>
+			</dependency>
 
 			<!-- fast json -->
 			<dependency>
