--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<mysql.version>5.1.38</mysql.version>
 		<spring-boot-mybatis.version>1.3.2</spring-boot-mybatis.version>
 		<spring.version>4.3.10.RELEASE</spring.version>
+		<aspectjweaver.version>1.9.3</aspectjweaver.version>
 		<spring-boot.version>1.5.5.RELEASE</spring-boot.version>
 		<dubbo.version>2.7.0</dubbo.version>
 		<curator-framework.version>2.12.0</curator-framework.version>
@@ -125,6 +126,13 @@
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.version}</version>
+			</dependency>
+
+			<!-- aspectjweaver -->
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectjweaver.version}</version>
 			</dependency>
 
 			<!-- spring -->
