--- a/restful-springboot/pom.xml
+++ b/restful-springboot/pom.xml
@@ -13,6 +13,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.sic777.framework</groupId>
 			<artifactId>restful-base</artifactId>
 			<version>${project.parent.version}</version>
