--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,6 @@
 		<dubbo.version>2.7.0</dubbo.version>
 		<curator-framework.version>2.12.0</curator-framework.version>
 		<fastjson.version>1.2.31</fastjson.version>
-		<httpcore.version>4.4.6</httpcore.version>
 		<httpclient.version>4.5.3</httpclient.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<slf4j.version>1.7.25</slf4j.version>
@@ -260,20 +259,27 @@
 			<!-- http -->
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpcore</artifactId>
-				<version>${httpcore.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
-			<!-- beanutils -->
+			<!-- bean utils -->
 			<dependency>
 				<groupId>commons-beanutils</groupId>
 				<artifactId>commons-beanutils</artifactId>
 				<version>${commons-beanutils.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<!-- log -->
