--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,6 @@
 		<httpclient.version>4.5.3</httpclient.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<slf4j.version>1.7.25</slf4j.version>
-		<log4j.version>2.7</log4j.version>
 		<netty.version>4.1.1.Final</netty.version>
 		<proguard.version>5.3.3</proguard.version>
 
@@ -284,36 +283,16 @@
 
 			<!-- log -->
 			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-slf4j-impl</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-api</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-core</artifactId>
-				<version>${log4j.version}</version>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-log4j2</artifactId>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
+				<optional>true</optional>
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jul-to-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
 
